# modules/boardgame/application/dtos/battleship.go
@@ -3,8 +3,9 @@ package dtos
 import "github.com/vmdt/gogameserver/modules/boardgame/domain"
 
 type BattleshipGame struct {
-	PlayerId string        `json:"player_id"`
-	RoomId   string        `json:"room_id"`
-	Ships    []domain.Ship `json:"ships"`
-	Shots    []domain.Shot `json:"shots"`
+	PlayerId      string        `json:"player_id"`
+	RoomId        string        `json:"room_id"`
+	Ships         []domain.Ship `json:"ships"`
+	Shots         []domain.Shot `json:"shots"`
+	OpponentShots []domain.Shot `json:"opponent_shots"`
 }
